[gd_scene load_steps=11 format=3 uid="uid://4xr4s3a7sxpo"]

[ext_resource type="Script" path="res://Scripts/Characters/player.gd" id="1_n7hnu"]
[ext_resource type="Texture2D" uid="uid://b7uamyt4jnnhh" path="res://Materials/Items/IronHelmet-Sheet.png" id="2_tm8la"]
[ext_resource type="Texture2D" uid="uid://clq5rty2medp0" path="res://Materials/Items/IronBody-Sheet.png" id="3_8jpk7"]
[ext_resource type="Texture2D" uid="uid://cb0b17fns8w0c" path="res://Materials/Items/IronSword.png" id="4_p8i2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04hi0"]
size = Vector2(44, 68)

[sub_resource type="Animation" id="Animation_hru1y"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Helmet:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Helmet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Helmet:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, -12), Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_6wc2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Helmet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Helmet:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyssf"]
_data = {
"Idle": SubResource("Animation_hru1y"),
"RESET": SubResource("Animation_6wc2b")
}

[sub_resource type="GDScript" id="GDScript_ssuf2"]
script/source = "extends Area2D

@onready var damage = get_parent().get_dmg()
var targetEntity = null

var canHit = true

func _input(event):
	if event.is_action_pressed(\"ui_hit\") && targetEntity != null && canHit:
		targetEntity.recieve_dmg(damage)
		canHit = false
		await get_tree().create_timer(0.5).timeout
		canHit = true

func _on_body_entered(body):
	if body.name == \"BlueSlime\":
		targetEntity = body


func _on_body_exited(body):
	if body.name == \"BlueSlime\":
		targetEntity = null
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkxka"]
size = Vector2(61, 68)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_n7hnu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_04hi0")

[node name="Helmet" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(0, -12)
texture = ExtResource("2_tm8la")
hframes = 2

[node name="Body" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(0, 22)
texture = ExtResource("3_8jpk7")
hframes = 2

[node name="Sword" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(11, 22)
texture = ExtResource("4_p8i2c")

[node name="PlayerAnimation" type="AnimationPlayer" parent="CollisionShape2D"]
libraries = {
"": SubResource("AnimationLibrary_uyssf")
}

[node name="AlertDMG" type="Area2D" parent="."]
script = SubResource("GDScript_ssuf2")

[node name="AreaDMG" type="CollisionShape2D" parent="AlertDMG"]
position = Vector2(52.5, 0)
shape = SubResource("RectangleShape2D_wkxka")

[connection signal="body_entered" from="AlertDMG" to="AlertDMG" method="_on_body_entered"]
[connection signal="body_exited" from="AlertDMG" to="AlertDMG" method="_on_body_exited"]
